cmake_minimum_required(VERSION 3.27)
project(Data_Estructure_C)

set(CMAKE_CXX_STANDARD 17)

add_executable(Data_Estructure_C main.cpp
        BigO/Bigo.cpp
        ClassAndPointers/Cookie.cpp
        ClassAndPointers/Cookie.h
        LinkedList/LinkedList.cpp
        LinkedList/LinkedList.h
        DoubleLinkedList/DoubleLinkedList.cpp
        DoubleLinkedList/DoubleLinkedList.h
        Stack/Stack.cpp
        Stack/Stack.h
        Queue/Queue.cpp
        Queue/Queue.h
        RingList/RingList.cpp
        RingList/RingList.h
        MatrizDispersa/MatrizDispersa.cpp
        MatrizDispersa/MatrizDispersa.h
        MatrizDispersa/List_Encabezado.cpp
        MatrizDispersa/List_Encabezado.h
        Stack/StackVector.cpp
        Stack/ReverseString.cpp
        Stack/SortStack.cpp
        Stack/QueueUsingTwoStacks.h
        tree/Node.cpp
        tree/Node.h
        tree/BinarySearchTree.cpp
        tree/BinarySearchTree.h
        tree/treeBk.cpp
        tree/treeB.cpp
        Grafo/Grafo.cpp
        Grafo/PriorityQueue.cpp
        Grafo/CostoMin.cpp
        Criptografo/Criptografo.h
        Criptografo/Criptografo.cpp
        Criptografo/x.cpp
        Criptografo/y.cpp
        Criptografo/busca.cpp
        "arbol/ArbolBinario .cpp"
)
